tests/ok/function-generic-call.ari
fn identity[T](value: T) -> T {
  return value;
}

fn choose[T](left: T, right: T, flag: bool) -> T {
  if flag {
    return left;
  }
  return right;
}

fn main() -> i64 {
  return identity(20) + choose(1, 2, false);
}
